--- a/MW5 Mod Oganizer WPF/Themes/DataGrid/DataGridCellTheme.xaml
+++ b/MW5 Mod Oganizer WPF/Themes/DataGrid/DataGridCellTheme.xaml
@@ -3,6 +3,8 @@
     <Style x:Key="DataGridCellStyle1" TargetType="{x:Type DataGridCell}">
         <Setter Property="Background" Value="Transparent"/>
         <Setter Property="Foreground" Value="{Binding Foreground, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=DataGridRow}}"/>
+        <Setter Property="BorderBrush" Value="Transparent"/>
+        <Setter Property="BorderThickness" Value="0"/>
         <Setter Property="VerticalAlignment" Value="Center"/>
         <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
         <Setter Property="Height" Value="20"/>
@@ -13,8 +15,9 @@
                     <Border Padding="15 0" 
                             Background="{TemplateBinding Background}" 
                             SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" 
-                            VerticalAlignment="Center">
-                        <ContentPresenter VerticalAlignment="Center" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"/>
+                            VerticalAlignment="Stretch">
+                        <ContentPresenter VerticalAlignment="Center" 
+                                          SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"/>
                     </Border>
                 </ControlTemplate>
             </Setter.Value>
