--- a/MW5 Mod Oganizer WPF/Themes/DataGrid/DataGridCellTheme.xaml
+++ b/MW5 Mod Oganizer WPF/Themes/DataGrid/DataGridCellTheme.xaml
@@ -5,9 +5,9 @@
         <Setter Property="Foreground" Value="{Binding Foreground, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=DataGridRow}}"/>
         <Setter Property="BorderBrush" Value="Transparent"/>
         <Setter Property="BorderThickness" Value="0"/>
-        <Setter Property="VerticalAlignment" Value="Center"/>
+        <Setter Property="VerticalAlignment" Value="Stretch"/>
         <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
-        <Setter Property="Height" Value="20"/>
+        <Setter Property="Height" Value="auto"/>
         <Setter Property="FontSize" Value="13"/>
         <Setter Property="Template">
             <Setter.Value>
